# NexGAP

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  run_end_to_end.py
Gyrfalcon/: __init__.py  main.py  pyproject.toml
Gyrfalcon/config/: settings.py
Gyrfalcon/core/: pipeline.py
Gyrfalcon/frameworks/: framework_manager.py  prompt.md
Gyrfalcon/frameworks/consignal_cn/: config.json  framework_config.yaml  persona.jsonl  problem_types.json  problem_types.json.bak  tag_sampling_stats.json
Gyrfalcon/frameworks/medical_health_consultant/: config.json  framework_config.yaml  persona.jsonl  persona.jsonl.bak  problem_types.json  problem_types.json.bak  tag_sampling_stats.json
Gyrfalcon/frameworks/medical_health_consultant/source_data/: CMB-Clin-qa.json
Gyrfalcon/frameworks/menu_margin_pricing_system/: config.json  framework_config.yaml  persona.jsonl  problem_types.json  problem_types.json.bak  tag_sampling_stats.json
Gyrfalcon/frameworks/patch_lens_validator/: config.json  framework_config.yaml  persona.jsonl  problem_types.json  problem_types.json.bak  tag_sampling_stats.json
Gyrfalcon/frameworks/pitlane_proof/: config.json  framework_config.yaml  persona.jsonl  problem_types.json  problem_types.json.bak  tag_sampling_stats.json
Gyrfalcon/frameworks/sync_sleuth_music_rights/: config.json  framework_config.yaml  persona.jsonl  problem_types.json  problem_types.json.bak  tag_sampling_stats.json
Gyrfalcon/llm_interface/: query_generator.py
Gyrfalcon/llm_interface/agents/: __init__.py  base.py  file_augmentation_agent.py  file_requirement_agent.py  file_system_agent.py  fuzzifier_agent.py  query_synthesis_agent.py  rewrite_agent.py  router_agent.py  url_extraction_agent.py  url_processing_agent.py  url_query_rewrite_agent.py  url_repair_agent.py  url_validator_agent.py  web_research_agent.py
Gyrfalcon/problem_type_tree/: __init__.py  file_lock.py  sampling_manager.py  tree_manager.py  visualizer.py
Gyrfalcon/scripts/: cmds.sh
Gyrfalcon/utils/: env_loader.py
converter/: .gitignore  __init__.py  cache_manager.py  mcp_preloader.py
converter/schema/: __init__.py  framework_config_example.yaml  framework_config_schema.py  nexau_config_example.yaml  nexau_config_schema.py  validate_example.py
converter/trace/: convert_spans_to_chatcompletion.py  convert_spans_to_chatcompletion_nexau.py  convert_trace_to_specific_tool_call_style.py  convert_trace_tool_calls.py  filter_xml_errors.py  get_trace.py  get_traces.py  langfuse_utils.py
docs/: README_cn.md  converter.md  converter_cn.md  gyrfalcon.md  gyrfalcon_cn.md  workflow.md  workflow_cn.md
tests/lint/: check_license_header.py
