# Copyright (c) Nex-AGI. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "gyrfalcon"
version = "3.1.0"
description = "Gyrfalcon v3 - Intelligent Query Synthesis System with Problem Type Trees"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies - most will be satisfied by agent4agent workspace
    "openai>=1.0.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",

    # Gyrfalcon-specific dependencies
    "click>=8.0.0",
    "dataclasses-json>=0.6.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages = [
    "config",
    "core",
    "frameworks",
    "llm_interface",
    "llm_interface.agents",
    "problem_type_tree",
    "utils",
]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.jsonl", "*.md", "*.txt", "*.sh"]
"frameworks" = ["**/*"]

[project.scripts]
gyrfalcon = "main:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
